--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,3 +17,12 @@
   -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
 }
+.bgnav {  
+  box-shadow: 0px 4px 3px rgba(64, 41, 41,.8);
+  font-family: sans-serif;
+}
+
+.layout li:hover {
+  border-radius: 10px;
+  box-shadow: 0px 7px 5px rgba(61, 133, 77, 0.8);
+}
