--- a/css/estilos.css
+++ b/css/estilos.css
@@ -17,8 +17,8 @@
   -webkit-box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
   box-shadow: 0 30px 60px 0 rgba(0, 0, 0, 0.3);
 }
-.bgnav {  
-  box-shadow: 0px 4px 3px rgba(64, 41, 41,.8);
+.bgnav {
+  box-shadow: 0px 4px 3px rgba(64, 41, 41, 0.8);
   font-family: sans-serif;
 }
 
@@ -27,31 +27,31 @@
   box-shadow: 0px 7px 5px rgba(61, 133, 77, 0.8);
 }
 
-.color-body{
+.color-body {
   background-color: #e9ecef;
 }
 
-.sh-usr{
+.sh-usr {
   box-shadow: 0px 4px 3px rgba(26, 103, 148, 0.8);
 }
 
-#body-login{
+#body-login {
   background-image: url("../img/teshEdificio.jpeg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover; 
+  background-size: cover;
 }
 
 #body-login:before {
-	content:'';
-	position: absolute;
+  content: "";
+  position: absolute;
   top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0,0,0,0.4);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
-.sombraSGA{
+.sombraSGA {
   text-shadow: rgb(51, 47, 47) 0.1em 0.1em 0.2em;
 }
