Banco de proyectos y recuperacion de password

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,3 +86,20 @@
 .sombraR{        
   text-shadow: #008a02 0.1em 0.1em 0.4em;
 }
+
+#body-password {
+  background-image: url("../img/teshEscaleras.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+#body-password:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
